--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,22 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class="welcome-banner">
-  <h1>
-    {{ title }}
-  </h1>
-  <img id="bio-img" class="photo-main" alt="Shane Besong" src="../assets/images/20170307_110758.jpg">
+<div class="main-page">
+  <div>
+    <h1>
+      {{ title }}
+    </h1>
+    <img id="bio-img" class="photo-main" alt="Shane Besong" src="../assets/images/20170307_110758.jpg">
+  </div>
+  <div class="media-icon-wrapper">
+    <span class="media-icon"><a href="https://github.com/shwheelz"><i class="fab fa-github"></i></a></span>
+    <span class="media-icon"><a href="https://instagram.com/sfbesong"><i class="fab fa-instagram"></i></a></span>
+    <span class="media-icon"><a href="https://twitter.com/shwheelz"><i class="fab fa-twitter"></i></a></span>
+    <span class="media-icon"><a href="https://www.linkedin.com/in/sfbesong"><i class="fab fa-linkedin"></i></a></span>
+  </div>
+  <div class="about-me">
+    <p>
+      You've discovered my little nook of the web.
+      I'm Shane Besong, a full-stack developer by day, and an avid soccer player, drummer, and gamer by night.
+      Here's where I'll share all of my deepest, darkest secrets, so when someone asks for the dirt on me, you know what to say.
+    </p>
+  </div>
+  <app-skills></app-skills>
 </div>
-<div class="media-icon-wrapper">
-  <span class="media-icon"><a href="https://github.com/shwheelz"><i class="fab fa-github"></i></a></span>
-  <span class="media-icon"><a href="https://instagram.com/sfbesong"><i class="fab fa-instagram"></i></a></span>
-  <span class="media-icon"><a href="https://twitter.com/shwheelz"><i class="fab fa-twitter"></i></a></span>
-</div>
-
-
-
