--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,6 +26,16 @@ h1 {
   font-size: 32px;
 }
 
+.nav-icon {
+  height: 50px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
 .about-me {
   font-size: 20px;
+}
+
+.section {
+  margin-bottom: 10px;
 }
