--- a/src/app/skills/skills.component.css
+++ b/src/app/skills/skills.component.css
@@ -6,3 +6,10 @@
 .skills-icon {
   margin-right: 8px;
 }
+
+.section {
+  border: none;
+  font-family: 'Patrick Hand';
+  font-size: 1.5em;
+  font-weight: bold;
+}
